# cortex-metagen

./: .gitignore  Features.md  MUSTKNOWS.md  README.md  __codex_relevant.diff  __codex_stat.txt  __codex_status.txt  __view.cjs  agent_tasks.csv  build-errors.txt  carcols-meta.test.ts  carvariations-meta.test.ts  index.html  meta-merge.test.ts  modkits-meta.test.ts  package-lock.json  package.json  recent-workspaces.test.ts  sidebar-customization.test.ts  vehicles-meta.test.ts  version-errors.txt  vite.config.ts
.github/workflows/: release.yml
docs/: README.md
docs/content/docs/: getting-started.mdx  index.mdx  meta.json
docs/superpowers/plans/: 2026-04-01-sirens-page-hardening.md
patches/: @radix-ui__react-compose-refs@1.1.2.patch
scripts/: check-version-sync.mjs  generate-icons.mjs  patch-radix-compose-refs.mjs  run-tauri.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  PerformanceStats.tsx  PresetPicker.tsx  SectionPresetPicker.tsx  SliderField.tsx  SquareToggle.tsx  ValidationPanel.tsx  VehicleDropdown.tsx
src/lib/: dictionary.ts  handling-field-config.ts  logger.ts  meta-merge.ts  presets.ts  recent-workspaces.ts  section-presets.ts  sidebar-customization.ts  updater.ts  workspace-switcher.ts  xml-parser.ts  xml-serializer.ts  xml-validator.ts
src/store/: merge-store.ts  meta-store.ts  sidebar-customization-store.ts  workspace-store.ts  workspace-switcher-store.ts
(+73 files in other folders)
