[package]
name = "cortex-metagen"
version = "0.13.0"
description = "Meta file generator for FiveM developers"
authors = ["Cortex Labs"]
edition = "2021"

[lib]
name = "cortex_metagen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dotenv = "0.15"





